fixed graphical glitches with download buttons on small resolutions

--- a/public/css/screen.css
+++ b/public/css/screen.css
@@ -25,6 +25,7 @@ a {
   padding: 0px;
   margin: 0px;
   box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.16), 0px 2px 10px 0px rgba(0, 0, 0, 0.12);
+  z-index: 2;
 }
 @media only screen and (min-width: 500px) {
   #top {
@@ -143,6 +144,7 @@ button:hover {
   color: #1abc9c;
 }
 
+/* === list === */
 .listmain{
   list-style-type: none;
   margin: 15px;
@@ -151,33 +153,30 @@ button:hover {
   line-height: 1.5;
   background-color: #FFF;
   box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.16), 0px 2px 10px 0px rgba(0, 0, 0, 0.12);
+  min-width: 370px;
 }
 .listmain li{
   height: 3em;
   border-bottom: 1px solid #DDD;
 }
 .listmain .listlink{
-  padding-left: 1em;
-  display: inline-block;
-  box-sizing: border-box;
+  display: flex;
 }
 .listmain .listlink:hover{
   background-color: #B0BEC5;
 }
 .listmain .listdate{
-  display: inline-block;
-  float: left;
   line-height: 3;
-  width: 100px;
+  flex: 0 0 100px;
   height: 3em;
+  padding-left:15px;
 }
 .listmain .listtitle{
-  display: inline-block;
-  float: left;
-  line-height: 3;
-  max-width: 330px;
-  height: 3em;
+  white-space: nowrap;
   overflow: hidden;
+  text-overflow: ellipsis;
+  line-height: 3;
+  height: 3em;
 }
 .listmain .listdl{
   float: right;
@@ -198,6 +197,7 @@ button:hover {
   background-color: #EBEBEB;
 }
 
+/* === thumbs === */
 .thumblist {
   margin: auto;
   margin-top: 70px;
@@ -223,6 +223,7 @@ ul{
   box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.16), 0px 2px 10px 0px rgba(0, 0, 0, 0.12);
 }
 
+/* === imageview === */
 #imageview-container {
   display: none;
   color: #fff;
